--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1201,7 +1201,7 @@ var display = (async function(){
 	
 	try {
 	canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
-	 }catch(err){,
+	 }catch(err){
 		canvas_3(contract_bal, i, address, j, 10, box2);
 	 }
 	
