--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1219,7 +1219,7 @@ var display = (async function(){
 	
 	newBtn.id = 'a' + i;
 	
-	box.insertBefore(newBtn, box.children[0]);
+	box2.insertBefore(newBtn, box2.children[0]);
 	//document.getElementById("r" & _i).appendChild(newBtn);
 	
 	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
