--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -39,7 +39,8 @@ border-radius: 25px;
 border: 2px solid #5F6C6D;
 background-size: auto;
 width: 50%;
-float: center;
+position: absolute;
+right: 50%;
 }
 
 div.odd {
@@ -57,13 +58,15 @@ width: 50%;
 
 }
 
-<!-- img { -->
+img {
 
-<!-- width: 35px; -->
-<!-- height: 35px; -->
-<!-- border: 2px solid #5F6C6D; -->
+position: absolute;
+right: 50%;
+width: 50px;
+height: 50px;
+border: 2px solid #5F6C6D;
 
-<!-- } -->
+}
 
 
 
