--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -57,14 +57,14 @@ width: 50%;
 
 }
 
-img {
+<!-- img { -->
 
 
-width: 50px;
-height: 50px;
-border: 2px solid #5F6C6D;
+<!-- width: 400px; -->
+<!-- height: 400px; -->
+<!-- border: 2px solid #5F6C6D; -->
 
-}
+<!-- } -->
 
 
 
