--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1141,8 +1141,8 @@ var display = (async function(){
 	
 	//address_count = addressCount
 	
-	//var chat = document.getElementById("contract_address_ID");	// finds the container
-	var chat = document.getElementById("root");
+	var chat = document.getElementById("contract_address_ID");	// finds the container
+	//var chat = document.getElementById("root");
 	var documentFragment = document.createDocumentFragment();
 	
 	for (var i = addressCount; i>0; i--){
