--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -38,7 +38,7 @@ padding: 5px;
 border-radius: 25px;
 border: 2px solid #5F6C6D;
 background-size: auto;
-width: 50%;
+
 
 }
 
@@ -108,7 +108,7 @@ font-size: large;
         </Button>
 <button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:35; right:400;"></p>
-<div id="root"></div>
+
 	
 </body>
 
@@ -120,7 +120,7 @@ font-size: large;
 
 <script>
 //<meta http-equiv="Content-Type" content="text/plain"; Charset=UTF-8">
-
+//<div id="root"></div>
 function open_window() {
   var myWindow = window.open("create_nft_swap_form_polygonx_livev3.html", "offer trade");
 }             
