--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -102,7 +102,7 @@ font-size: large;
 
 
 <body>
-<img id="logo" src=logoCapture.PNG></img>
+<center><img id="logo" src=logoCapture.PNG></img></center>
 <Button onClick="connect()" >
           Connect
         </Button>
