--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -71,10 +71,10 @@ width: 50%;
 
 input {
 
-font-size: large;
+font-size: small;
 right:0;
+left:0;
 position: absolute;
-left: 10%;
 color:#5F6C6D;
 border: 2px solid #5F6C6D;
 
