--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1147,6 +1147,7 @@ var display = (async function(){
 	var address = web3.utils.toChecksumAddress(address)
 	
 	var container = document.createElement('div')
+	container.id = "q" + i;
 	documentFragment.appendChild(container);
 	//var chat = document.createElement("box");
 	
