--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1157,8 +1157,8 @@ var display = (async function(){
 	box2.id = "s" + i;
 	container.appendChild(box1);
 	container.appendChild(box2);
-	container.innerHTML = "  OFFER NO: " + i
-	container.style = "font-weight: bold;"
+	container.insertAdjacentText('beforeend', "  OFFER NO: " + i)
+	//container.style = "font-weight: bold;"
 	
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
 	for (j=0;j<contract_length;j++){
