--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1157,7 +1157,7 @@ var display = (async function(){
 	box2.id = "s" + i;
 	container.appendChild(box1);
 	container.appendChild(box2);
-	container.insertAdjacentText('beforeend', "  OFFER NO: " + i)
+	container.insertAdjacentText('afterbegin', "  OFFER NO: " + i)
 	//container.style = "font-weight: bold;"
 	
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
@@ -1182,7 +1182,7 @@ var display = (async function(){
 	
 	var array_contract_ID2 = new Array();
 	var array_tokenID2 = new Array();
-	//container.outerHTML = '<center style="color:#ba55d3; font-family: helvetica narrow, sans-serif;"> &#8657; trade &#8659;</center>'
+	container.outerHTML.insertAdjacentHTML('afterend','<center style="color:#ba55d3; font-family: helvetica narrow, sans-serif;"> &#8657; trade &#8659;</center>')
 	
 	for (j=0;j<contract_length1;j++){ 
 	
