--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1182,7 +1182,7 @@ var display = (async function(){
 	
 	var array_contract_ID2 = new Array();
 	var array_tokenID2 = new Array();
-	container.outerHTML.insertAdjacentHTML('afterend','<center style="color:#ba55d3; font-family: helvetica narrow, sans-serif;"> &#8657; trade &#8659;</center>')
+	container.insertAdjacentHTML('afterend','<center style="color:#ba55d3; font-family: helvetica narrow, sans-serif;"> &#8657; trade &#8659;</center>')
 	
 	for (j=0;j<contract_length1;j++){ 
 	
