--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1250,7 +1250,7 @@ var acct = (async function(){
 var _image = await k(num1, addr, num2).call();
 const imgurl = _image //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
 fetch(imgurl)
-  .then(response.header('Access-Control-Allow-Origin', "*"))
+  //.then(response.header('Access-Control-Allow-Origin', "*"))
   .then(response => response.blob())
   .then(myBlob => {
   var urlCreator = window.URL || window.webkitURL;
