--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -66,10 +66,10 @@ font-size: large;
 
 <body>
 <center><img id="logo" src=logoCapture.PNG></img></center>
-<Button onClick="connect()" >
+<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:25;" onClick="connect_metamask()">
           Connect
         </Button>
-<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
+<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()">offer trade</button>
 <center><p id="contract_address_ID"></p></center>
 
 	
@@ -89,33 +89,36 @@ function open_window() {
 }             
 
 
-<!-- var metamask = (async function(){ -->
+function connect_metamask(){
+var metamask = (async function(){
   	
-  <!-- await ethereum.enable(); -->
+  await ethereum.enable();
   	
   
-  <!-- //alert(balance) -->
+  //alert(balance)
 
-<!-- })() -->
+})()
 
-<!-- //sleep(200); -->
-<!-- function connect(){ -->
-    <!-- provider.request({ method: "eth_requestAccounts" }) -->
+//sleep(200);
+function connect(){
+    provider.request({ method: "eth_requestAccounts" })
          
-  <!-- }; -->
-<!-- web3 = new Web3(web3.currentProvider);         -->
+  };
+web3 = new Web3(web3.currentProvider);        
 
-<!-- //var web3 = new Web3(new Web3.providers.HttpProvider( -->
-    <!-- //"https://mainnet.infura.io/v3/69462286c61f42d2891a2ced35c91f8d" -->
-<!-- //)); -->
+//var web3 = new Web3(new Web3.providers.HttpProvider(
+    //"https://mainnet.infura.io/v3/69462286c61f42d2891a2ced35c91f8d"
+//));
 
 
-<!-- web3.eth.net.getNetworkType() -->
-<!-- .then(console.log); -->
+web3.eth.net.getNetworkType()
+.then(console.log);
 
-<!-- web3.eth.net.isListening() -->
-   <!-- .then(() => console.log('web3 is connected')) -->
-   <!-- .catch(e => console.log('Wow. Something went wrong')); -->
+web3.eth.net.isListening()
+   .then(() => console.log('web3 is connected'))
+   .catch(e => console.log('Wow. Something went wrong'));
+
+}
 
 var abi = [
 	{
@@ -1079,37 +1082,7 @@ const contract_bal = new web3.eth.Contract(abi, contract_address);
 
 
 
-window.addEventListener('load', async () => {
-    // Modern dapp browsers...
-    if (window.ethereum) {
-        window.web3 = new Web3(ethereum);
-        try {
-            await ethereum.enable();
-            var accounts= await web3.eth.getAccounts();
-            var option={from: accounts[0] };
-            var myContract = new web3.eth.Contract(abi,contract_address);
-            myContract.methods.RegisterInstructor('11','Ali')
-            .send(option,function(error,result){
-                if (! error)
-                    console.log(result);
-                else
-                    console.log(error);
-            });
-        } catch (error) {
-            // User denied account access...
-        }
-    }
-    // Legacy dapp browsers...
-    else if (window.web3) {
-        window.web3 = new Web3(web3.currentProvider);
-        // Acccounts always exposed
-        web3.eth.sendTransaction({/* ... */});
-    }
-    // Non-dapp browsers...
-    else {
-        console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
-    }
-});
+
 
 
 
