--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1227,7 +1227,7 @@ var display = (async function(){
   xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
       response = this.blob;
-	  var myBlob = {
+	  var urlCreator = this.blob; 
   var urlCreator = window.URL || window.webkitURL;
    var imageUrl = urlCreator.createObjectURL(myBlob);
    //const myImgElem = document.getElementById('my-img');
@@ -1277,8 +1277,6 @@ var display = (async function(){
 	
 		
    //ew1Div.appendChild(canvas1);
-  
-}
     }
   };
   xhttp.open("GET", _image, true);
