--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1226,10 +1226,11 @@ var display = (async function(){
 		var xhttp = new XMLHttpRequest();
   xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
-      response = this.blob;
+      response.header('Access-Control-Allow-Origin', '*')
+	  response = this.blob;
 	  var urlCreator = this.blob; 
   var urlCreator = window.URL || window.webkitURL;
-   var imageUrl = urlCreator.createObjectURL(myBlob);
+   var imageUrl = urlCreator.createObjectURL(response);
    //const myImgElem = document.getElementById('my-img');
    //var myImgElem = new Image;
    
