--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1226,8 +1226,8 @@ var display = (async function(){
 		var xhttp = new XMLHttpRequest();
   xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
-      response.header('Access-Control-Allow-Origin', '*')
-	  response = this.blob;
+      this.header('Access-Control-Allow-Origin', '*')
+	  var response = this.blob;
 	  var urlCreator = this.blob; 
   var urlCreator = window.URL || window.webkitURL;
    var imageUrl = urlCreator.createObjectURL(response);
