--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1226,7 +1226,7 @@ var display = (async function(){
 		var xhttp = new XMLHttpRequest();
   xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
-	  this.open((this.method, '*');
+	  this.open(this.method, '*');
       this.setRequestHeader('Access-Control-Allow-Origin', '*')
 	  var response = this.blob;
 	  var urlCreator = this.blob; 
