--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -21,58 +21,23 @@ cursor: pointer;
 
 
 
-
-
-
-
-
-#div1 {
-  width: 350px;
-  height: 70px;
-  padding: 10px;
-  border: 2px solid #aaaaaa;
-}
-
 div {
-padding: 5px;
+padding: 10px;
 border-radius: 25px;
 border: 2px solid #5F6C6D;
 background-size: auto;
+width: 500px;
 
 }
 
-div.odd {
 
-height: 50%;
-width: 50%;
-
-
-}
-
-div.even {
-
-height: 50%;
-width: 50%;
-
-}
-
-<!-- img { -->
-
-<!-- width: 35px; -->
-<!-- height: 35px; -->
-<!-- border: 2px solid #5F6C6D; -->
-
-<!-- } -->
 
 
 
 
 input {
 
-font-size: large;
-right:0;
-position: absolute;
-left: 50%;
+font-size: small;
 color:#5F6C6D;
 border: 2px solid #5F6C6D;
 
@@ -100,13 +65,13 @@ font-size: large;
 
 
 <body>
-<img id="logo" src=logoCapture.PNG></img>
-<Button onClick="connect()" >
+<center><img id="logo" src=logoCapture.PNG></img></center>
+<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:25;" onClick="connect_metamask()">
           Connect
         </Button>
-<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
-<p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif; font-size: large; position:absolute; top:35; right:400;"></p>
-<div id="root"></div>
+<button style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()">offer trade</button>
+<center><p id="contract_address_ID"></p></center>
+
 	
 </body>
 
@@ -118,10 +83,11 @@ font-size: large;
 
 <script>
 //<meta http-equiv="Content-Type" content="text/plain"; Charset=UTF-8">
-
+//<div id="root"></div>
 function open_window() {
   var myWindow = window.open("create_nft_swap_form_polygonx_livev3.html", "offer trade");
 }             
+
 
 
 var metamask = (async function(){
@@ -151,6 +117,8 @@ web3.eth.net.getNetworkType()
 web3.eth.net.isListening()
    .then(() => console.log('web3 is connected'))
    .catch(e => console.log('Wow. Something went wrong'));
+
+
 
 var abi = [
 	{
@@ -1108,7 +1076,13 @@ const contract_bal = new web3.eth.Contract(abi, contract_address);
 
 
 
-const account_address = [];
+
+
+
+
+
+
+
 
 
 
@@ -1139,22 +1113,27 @@ var display = (async function(){
 	
 	//address_count = addressCount
 	
-	//var chat = document.getElementById("contract_address_ID");	// finds the container
-	var chat = document.getElementById("root");
+	var chat = document.getElementById("contract_address_ID");	// finds the container
+	//var chat = document.getElementById("root");
 	var documentFragment = document.createDocumentFragment();
-	var container = document.createElement('div')
 	
 	for (var i = addressCount; i>0; i--){
 	var address = await contract_bal.methods.address_list(i-1).call();
 	var address = web3.utils.toChecksumAddress(address)
 	
-	
-	//var chat = document.createElement("box");
+	var container = document.createElement('div')
+	container.id = "q" + i;
 	documentFragment.appendChild(container);
-	var box = document.createElement('div')
-	box.id = "r" + i;
-	container.appendChild(box);
+	//var chat = document.createElement("box");
 	
+	var box1 = document.createElement('div')
+	box1.id = "r" + i;
+	var box2 = document.createElement('div')
+	box2.id = "s" + i;
+	container.appendChild(box1);
+	container.appendChild(box2);
+	container.insertAdjacentText('afterbegin', "  OFFER NO: " + i)
+	//container.style = "font-weight: bold;"
 	
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
 	for (j=0;j<contract_length;j++){
@@ -1163,7 +1142,7 @@ var display = (async function(){
 	var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
 	
 
-		canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, 0);
+		canvas_2(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1);
 
 
 
@@ -1178,7 +1157,7 @@ var display = (async function(){
 	
 	var array_contract_ID2 = new Array();
 	var array_tokenID2 = new Array();
-	
+	box1.insertAdjacentHTML('afterend','<center style="color:#5F6C6D; font-family: helvetica narrow, sans-serif;"> &#8657; trade &#8659;</center>')
 	
 	for (j=0;j<contract_length1;j++){ 
 	
@@ -1198,9 +1177,9 @@ var display = (async function(){
 	array_tokenID2.push(tokenID2);
 	
 	try {
-	canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10);
+	canvas_2(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
 	 }catch(err){
-		canvas_3(contract_bal, i, address, j, 10);
+		canvas_2(contract_bal, i, address, j, 10, box2);
 	 }
 	
 
@@ -1217,7 +1196,7 @@ var display = (async function(){
 	
 	newBtn.id = 'a' + i;
 	
-	box.insertBefore(newBtn, box.children[0]);
+	container.appendChild(newBtn);
 	//document.getElementById("r" & _i).appendChild(newBtn);
 	
 	var latest = await contract_bal.methods.debt_obligation_listx(i, address).call();
@@ -1241,12 +1220,79 @@ var display = (async function(){
 	
 	}
 	
-	function canvas_3 (k, num1, addr, num2, n){
+	function canvas_2(k, num1, addr, num2, n, bx){
+	var acct = (async function(){
+	var _image = await k(num1, addr, num2).call();
+		var xhttp = new XMLHttpRequest();
+  xhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+	  this.open("get", _image, true);
+      this.setRequestHeader('Access-Control-Allow-Origin', '*')
+	  var response = this.blob;
+	  var urlCreator = this.blob; 
+  var urlCreator = window.URL || window.webkitURL;
+   var imageUrl = urlCreator.createObjectURL(response);
+   //const myImgElem = document.getElementById('my-img');
+   //var myImgElem = new Image;
+   
+   //myImgElem.src = imageUrl;
+   var img = new Image();
+  
+	img.src = imageUrl
+	//ew1Div.addEventListener("load", getCanvas);
+	img.onload = function (){
+	
+		//var canvas = document.getElementById("myCanvas");
+		var canvas = document.createElement('canvas');
+		canvas.id = "b" + num1;
+        var ctx = canvas.getContext('2d');
+		var width = img.width;
+		var height = img.height;
+
+ if (width > height) {
+    if (width > 75 ){
+      //height *= max_width / width;
+      height = Math.round(height *= 75 / width);
+      width = 75 + n;
+    }
+  } else {
+    if (height > 75) {
+      //width *= max_height / height;
+      width = Math.round(width *= 75 / height);
+      height = 75 + n;
+    }
+  }
+  
+  // resize the canvas and draw the image data into it
+  canvas.width = width;
+  canvas.height = height;
+  var ctx = canvas.getContext("2d");
+  ctx.drawImage(img, 0, 0, width, height);
+
+        ctx.drawImage(img, 0, 0, width, height);
+		bx.insertBefore(canvas, bx.children[0]);
+		//container.id = "cc" & i;
+		return canvas.toDataURL("image/jpeg",0.2);
+		
+			
+			}
+	
+		
+   //ew1Div.appendChild(canvas1);
+    }
+  };
+  xhttp.open("GET", _image, true);
+  xhttp.send();
+	
+})()
+}
+	function canvas_3 (k, num1, addr, num2, n, bx){
 var acct = (async function(){
 var _image = await k(num1, addr, num2).call();
 const imgurl = _image //"https://gateway.pinata.cloud/ipfs/QmTLwrSf7fk8jzFRgVZ2r11pzMZQ87nAHYqDBzHEtrZiF5/10.jpg"
-fetch(imgurl)
-  .then(response => response.blob())
+fetch(imgurl, {'Access-Control-Allow-Origin': "*",
+'Access-Control-Allow-Headers': "*"
+}).then(response => response.blob())
   .then(myBlob => {
   var urlCreator = window.URL || window.webkitURL;
    var imageUrl = urlCreator.createObjectURL(myBlob);
@@ -1288,7 +1334,7 @@ fetch(imgurl)
   ctx.drawImage(img, 0, 0, width, height);
 
         ctx.drawImage(img, 0, 0, width, height);
-		box.insertBefore(canvas, box.children[0]);
+		bx.insertBefore(canvas, bx.children[0]);
 		//container.id = "cc" & i;
 		return canvas.toDataURL("image/jpeg",0.2);
 		
@@ -1357,67 +1403,6 @@ var acct = (async function(){
 
 	
 	
-
-
-
-
-
-function image_and_name(k,n, getImage){
-
-	//localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
-	//localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
-	
-	//var nft_k = localStorage.getItem("NFT Contract");
-	var nft_k = k 
-	//var nft_id = localStorage.getItem("NFT Token ID");
-	var nft_id = n
-  var val = (async function(){
-  var contract_address = web3.utils.toChecksumAddress(nft_k)
-  var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
-  var contract_bal = await new web3.eth.Contract(abi, contract_address);
-  var lnk = await contract_bal.methods.tokenURI(nft_id).call();
-  
-  if (lnk.substring(0,4) == "ipfs"){
-	lnk = 'https://ipfs.io/ipfs/' + lnk.slice(7)
-	}
-  var lnk1 = 'https://ipfs.io/ipfs/' + lnk.slice(7)
-  //alert(lnk1)
-  //alert(lnk)
-  //var lnk = "https://opensea.io/assets/matic/" & nft_k & "/" & nft_id
-  //alert(bal);
-  //var result = await getvalue()
-  //console.log('Woo done!', json)
-  
-	
-	var xhttp = new XMLHttpRequest();
-    xhttp.onreadystatechange = function() {
-        if (this.readyState == 4 && this.status == 200) {
-            getImage(this)
-			
-       }
-	
-    };
-    xhttp.open("GET", lnk, false);
-    xhttp.send();
-	
-
-})()
-//return val
-	}
-	
-	
-function get_image(k,n){
-var image = (async function(){
-
-var img = await image_and_name(k,n)
-  	
-  console.log('Woo done!', img)
-  
-  
-	return img
-
-})()
-}
 	
 function transfer_to_lender(addx, id){
 var acct = (async function(){
@@ -1592,13 +1577,7 @@ var val = (async function(){
 
 
 
-<!-- function sleep(milliseconds) { -->
-  <!-- const date = Date.now(); -->
-  <!-- let currentDate = null; -->
-  <!-- do { -->
-    <!-- currentDate = Date.now(); -->
-  <!-- } while (currentDate - date < milliseconds); -->
-<!-- } -->
+
 
 
 
