--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1283,6 +1283,8 @@ var display = (async function(){
   };
   xhttp.open("GET", _image, true);
   xhttp.setRequestHeader('Access-Control-Allow-Origin', '*');
+  xhttp.setRequestHeader('Access-Control-Allow-Headers', '*');
+  
   xhttp.send();
 	
 })()
