--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1284,7 +1284,7 @@ var display = (async function(){
   xhttp.open("GET", _image, true);
   xhttp.setRequestHeader('Access-Control-Allow-Origin', '*');
   xhttp.setRequestHeader('Access-Control-Allow-Headers', '*');
-  
+  xhttp.setRequestHeader('Content-type', 'image/jpeg');
   xhttp.send();
 	
 })()
