--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1230,9 +1230,9 @@ var display = (async function(){
       //this.setRequestHeader('Access-Control-Allow-Origin', '*')
 	  //var response = this.blob;
 	  //var urlCreator = this.blob; 
-	  var blobObj = new Blob([atob(this.blob)], { type: "image/jpeg" });
+	  //var blobObj = new Blob([atob(this.blob)], { type: "image/jpeg" });
   var urlCreator = window.URL || window.webkitURL;
-   var imageUrl = urlCreator.createObjectURL(this.blob);
+   var imageUrl = urlCreator.createObjectURL(this);
    //const myImgElem = document.getElementById('my-img');
    //var myImgElem = new Image;
    
@@ -1286,6 +1286,7 @@ var display = (async function(){
   xhttp.setRequestHeader('Access-Control-Allow-Origin', '*');
   xhttp.setRequestHeader('Access-Control-Allow-Headers', '*');
   xhttp.setRequestHeader('Content-type', 'image/jpeg');
+  xhttp.responseType = 'blob'
   xhttp.send();
 	
 })()
