--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -1141,9 +1141,11 @@ var display = (async function(){
 	//console.log(contract_ID1)
 	var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
 	
-
-		canvas_2(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1);
-
+		try {
+		canvas_3(contract_bal.methods.tokens_image1xy, i, address, j, -10, box1);
+			}catch(err){
+		canvas_1(contract_ID2, tokenID2, box1);
+	 }
 
 
 	
@@ -1179,7 +1181,7 @@ var display = (async function(){
 	try {
 	canvas_3(contract_bal.methods.tokens_image2xy, i, address, j, 10, box2);
 	 }catch(err){
-		canvas_1(contract_ID2, tokenID2, getImage, box2);
+		canvas_1(contract_ID2, tokenID2, box2);
 	 }
 	
 
@@ -1221,7 +1223,7 @@ var display = (async function(){
 	}
 	
 	
-	function canvas_1(contract_ID1, tokenID, getImage, bx){
+	function canvas_1(contract_ID1, tokenID, bx){
 	var acct = (async function(){
 	const image = await image_and_name(contract_ID1, tokenID, getImage);
 	//console.log(image);
