--- a/create_nft_swapx_polygon_livev2.html
+++ b/create_nft_swapx_polygon_livev2.html
@@ -25,7 +25,7 @@ div {
 padding: 10px;
 border-radius: 25px;
 border: 2px solid #5F6C6D;
-background-size: auto;
+background-size: 300px 100px;
 
 
 }
